--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,1 +1,34 @@
-<h1>Hello world</h1>
+{% extends "base.html" %} {% block content%} {% if request.user.is_authenticated %}
+{% for message in messages %}
+<div>[{{ message.created_at }}] {{message.author}}: <em>{{message.text}}</em></div>
+{% endfor %}
+<form
+   action="/chat/"
+   method="post"
+>
+   {% csrf_token %}
+   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+      <input
+         class="mdl-textfield__input"
+         type="text"
+         id="sample3"
+         name="textMessage"
+      />
+      <label
+         class="mdl-textfield__label"
+         for="sample3"
+         >Your Message..</label
+      >
+   </div>
+   <button
+      type="submit"
+      class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+   >
+      Send
+   </button>
+</form>
+{% else %}
+<h1>Your are not logged in!</h1>
+<div>Please log in first,</div>
+<p>for that click <a href="/login/">HERE</a></p>
+{% endif %} {% endblock%}
