--- a/chat/templates/register/register.html
+++ b/chat/templates/register/register.html
@@ -1,113 +1,125 @@
 {% extends "base.html" %} {% block content%}
+<div class="form-wrapper">
+   <div class="form-container">
+      <h3>Registration</h3>
+      <form
+         action="/register/"
+         method="POST"
+      >
+         {% csrf_token %} {% comment %} {{form}} {% endcomment %}
 
-<div class="login-container">
-   <h3>Registration</h3>
-   <form
-      action="/register/"
-      method="POST"
-   >
-      {% csrf_token %} {% comment %} {{form}} {% endcomment %}
+         <div class="row">
+            <div
+               class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+            >
+               <input
+                  class="mdl-textfield__input"
+                  type="text"
+                  id="username"
+                  name="username"
+               />
+               <label
+                  class="mdl-textfield__label"
+                  for="username"
+                  >Choose a unique username</label
+               >
+            </div>
+         </div>
+         {% if username_error%}
+         <div class="form-subline pink">A user with this name already exists!</div>
+         {% endif %} {% if username_exist_error%}
+         <div class="form-subline pink">Please enter a unique username!</div>
+         {% endif %}
+         <div class="row">
+            <div
+               class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+            >
+               <input
+                  class="mdl-textfield__input"
+                  type="text"
+                  id="firstName"
+                  name="firstName"
+               />
+               <label
+                  class="mdl-textfield__label"
+                  for="firstName"
+                  >First name</label
+               >
+            </div>
+         </div>
+         {% if firstName_error%}
+         <div class="form-subline pink">Please enter your first name!</div>
 
-      <div class="row">
-         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input
-               class="mdl-textfield__input"
-               type="text"
-               id="username"
-               name="username"
-            />
-            <label
-               class="mdl-textfield__label"
-               for="username"
-               >Choose a unique username</label
+         {% endif %}
+         <div class="row">
+            <div
+               class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
             >
+               <input
+                  class="mdl-textfield__input"
+                  type="text"
+                  id="lastName"
+                  name="lastName"
+               />
+               <label
+                  class="mdl-textfield__label"
+                  for="lastName"
+                  >Last name</label
+               >
+            </div>
          </div>
-      </div>
-      {% if username_error%}
-      <div class="form-subline pink">A user with this name already exists!</div>
-      {% endif %} {% if username_exist_error%}
-      <div class="form-subline pink">Please enter a unique username!</div>
-      {% endif %}
-      <div class="row">
-         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input
-               class="mdl-textfield__input"
-               type="text"
-               id="firstName"
-               name="firstName"
-            />
-            <label
-               class="mdl-textfield__label"
-               for="firstName"
-               >First name</label
-            >
-         </div>
-      </div>
-      {% if firstName_error%}
-      <div class="form-subline pink">Please enter your first name!</div>
+         {% if lastName_error%}
+         <div class="form-subline pink">Please enter your last name!</div>
 
-      {% endif %}
-      <div class="row">
-         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input
-               class="mdl-textfield__input"
-               type="text"
-               id="lastName"
-               name="lastName"
-            />
-            <label
-               class="mdl-textfield__label"
-               for="lastName"
-               >Last name</label
+         {% endif %}
+         <div class="row">
+            <div
+               class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
             >
+               <input
+                  class="mdl-textfield__input"
+                  type="password"
+                  id="password_1"
+                  name="password_1"
+               />
+               <label
+                  class="mdl-textfield__label"
+                  for="password_1"
+                  >Password</label
+               >
+            </div>
          </div>
-      </div>
-      {% if lastName_error%}
-      <div class="form-subline pink">Please enter your last name!</div>
-
-      {% endif %}
-      <div class="row">
-         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input
-               class="mdl-textfield__input"
-               type="password"
-               id="password_1"
-               name="password_1"
-            />
-            <label
-               class="mdl-textfield__label"
-               for="password_1"
-               >Password</label
+         <div class="row">
+            <div
+               class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
             >
+               <input
+                  class="mdl-textfield__input"
+                  type="password"
+                  id="password_2"
+                  name="password_2"
+               />
+               <label
+                  class="mdl-textfield__label"
+                  for="password_2"
+                  >Retype password</label
+               >
+            </div>
          </div>
-      </div>
-      <div class="row">
-         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input
-               class="mdl-textfield__input"
-               type="password"
-               id="password_2"
-               name="password_2"
-            />
-            <label
-               class="mdl-textfield__label"
-               for="password_2"
-               >Retype password</label
+         {% if password_error%}
+         <div class="form-subline pink">Your passwords do not match!</div>
+         <br />
+         {% endif %}
+         <div class="row">
+            <button
+               type="submit"
+               class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
             >
+               Register
+            </button>
          </div>
-      </div>
-      {% if password_error%}
-      <div class="form-subline pink">Your passwords do not match!</div>
-      <br />
-      {% endif %}
-      <div class="row">
-         <button
-            type="submit"
-            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-         >
-            Register
-         </button>
-      </div>
-   </form>
+      </form>
+   </div>
 </div>
+
 {% endblock %}
