--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,13 +22,19 @@
    padding: 100px 100px;
  }
 
- .login-container {
+ .form-container {
    position: relative;
    display: flex;
    flex-direction: column;
-   width: 100vw;
-   height: 100vh;
-   padding: 200px;
+
+ }
+
+ .form-wrapper {
+   width: 100%;
+   height: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
  }
 
  .form-subline {
